--- a/src/templates/dashboard/index.twig
+++ b/src/templates/dashboard/index.twig
@@ -70,7 +70,11 @@
     </div-->
 
     <div id="dashboard" class="bg-gray-100 p-6 pt-10 -mt-6 -ml-6 relative">
+
+        <p class="text-xl font-bold inline-block w-full mb-6">Showing data from <strong>09 September 2021</strong> to <strong>09 December 2021</strong></p>
+
         <stats-figures></stats-figures>
+        <stats-levels></stats-levels>
 
         <div class="block bg-gray-100 w-6 left-full pb-6 top-0 h-full absolute"></div>
         <div class="block bg-gray-100 h-6 top-full left-0 w-full absolute"></div>
