feat (busy): provided the follow on support bar chart and made title sticky

--- a/src/templates/dashboard/index.twig
+++ b/src/templates/dashboard/index.twig
@@ -69,12 +69,13 @@
         In the mean time, feel free to test this new area out to see how it will work. </p>
     </div-->
 
-    <div id="dashboard" class="bg-gray-100 p-6 pt-10 -mt-6 -ml-6 relative">
+    <div id="dashboard" class="bg-gray-100 p-6 -mt-6 -ml-6 relative">
 
-        <p class="text-xl font-bold inline-block w-full mb-6">Showing data from <strong>09 September 2021</strong> to <strong>09 December 2021</strong></p>
+        <p class="text-xl font-bold inline-block w-full sticky z-20 bg-gray-100 bg-opacity-70 py-4 backdrop-blur" style="top:50px;">Showing data from <strong>09 September 2021</strong> to <strong>09 December 2021</strong></p>
 
         <stats-figures></stats-figures>
         <stats-levels></stats-levels>
+        <stats-support></stats-support>
 
         <div class="block bg-gray-100 w-6 left-full pb-6 top-0 h-full absolute"></div>
         <div class="block bg-gray-100 h-6 top-full left-0 w-full absolute"></div>
