--- a/src/templates/trainings/index.twig
+++ b/src/templates/trainings/index.twig
@@ -102,6 +102,8 @@
 
                         {% if event.type == 'onlineEvent' %}
                             {% set eventTimetable = event.eventDatesTimeOnline.inReverse().one() %}
+                        {% if event.type == 'hybridEvent' %}
+                            {% set eventTimetable = event.eventHybridDatesTime.inReverse().one() %}
                         {% else %}
                             {% set eventTimetable = event.eventDatesTime ? event.eventDatesTime.inReverse().one() : null %}
                         {% endif %}
