--- a/src/templates/dashboard/index.twig
+++ b/src/templates/dashboard/index.twig
@@ -30,6 +30,7 @@
 
 {# The title of this CP section #}
 {% set title = "Attendees | Dashboard" %}
+{% set selectedSite = craft.app.request.getQueryParam('site')|default(permittedSites[0].handle ?? '*') %}
 
 {# The URL to this plugin's base CP section #}
 {% set pluginCpUrl = url('craft-attendees') %}
@@ -52,6 +53,11 @@
 
 {# Content that should appear in the page header#}
 {% block actionButton %}
+
+    {%- include "craft-attendees/_includes/sites-menu.twig" with {
+        baseUrl: pluginCpUrl ~ '/dashboard'
+    } -%}
+
 {% endblock %}
 
 {# The content of the CP Section#}
@@ -72,7 +78,7 @@
     <div id="dashboard" class="bg-gray-100 p-6 pt-2 -mt-6 -ml-6 relative">
 
         <header-dashboard></header-dashboard>
-        <stats-dashboard></stats-dashboard>
+        <stats-dashboard site="{{ selectedSite }}"></stats-dashboard>
 
         <div class="block bg-gray-100 w-6 left-full pb-6 top-0 h-full absolute"></div>
         <div class="block bg-gray-100 h-6 top-full left-0 w-full absolute"></div>
