--- a/src/templates/_includes/sites-menu.twig
+++ b/src/templates/_includes/sites-menu.twig
@@ -8,9 +8,8 @@
     {% endif %}
 {% endfor %}
 
-{% set selectedSite = craft.app.request.getQueryParam('site')|default(permittedSites[0].id ?? '2') %}
-
 {% set parameter = parameter|default('slug') %}
+{% set selectedSite = craft.app.request.getQueryParam('site')|default(parameter == 'slug' ? permittedSites[0].handle ?? '*' : permittedSites[0].id ?? '2') %}
 {% set selectedSiteObj = parameter == 'slug' ? craft.app.getSites().getSiteByHandle(selectedSite) : craft.app.getSites().getSiteById(selectedSite) %}
 
 {% if not currentUser.can('editSite:'~(selectedSiteObj.uid ?? '*')) %}
