fix: refactored the events fetchen to twig build: frontend

--- a/src/templates/_layouts/_cp.twig
+++ b/src/templates/_layouts/_cp.twig
@@ -2,7 +2,8 @@
 
 {% js %}
     window.Attendee = {{ {
-        "cpUrl": cpUrl()
+        "cpUrl": cpUrl(),
+        "csrf": craft.app.request.csrfToken
     }|json_encode|raw }}
 {% endjs %}
 
