--- a/src/templates/_layouts/_cp.twig
+++ b/src/templates/_layouts/_cp.twig
@@ -11,6 +11,6 @@
 {% set subnav = {
     "dashboard": { label: "Dashboard"|t('craft-attendees'), url: url(pluginCpUrl ~ '/dashboard') },
     "trainings": { label: "Trainings"|t('craft-attendees'), url: url(pluginCpUrl ~ '/trainings') },
-    "data-export": { label: "DataExport"|t('craft-attendees'), url: url(pluginCpUrl ~ '/data-export') },
+    "export": { label: "Export"|t('craft-attendees'), url: url(pluginCpUrl ~ '/export') },
 } %}
 
