--- a/src/templates/dashboard/index.twig
+++ b/src/templates/dashboard/index.twig
@@ -83,6 +83,8 @@
         {%- set start = date('-3 months')|atom -%}
 {%- endswitch -%}
 
+{% set eventTypes = craft.app.getSections().getSectionByHandle(settings.eventSection).getEntryTypes() %}
+
 {# Content that should appear in the page header#}
 {% block actionButton %}
 
@@ -97,39 +99,11 @@
 {% set content %}
     {{ craft.viteattendees.register('/src/js/dashboard.ts', false, scriptTagOptions) }}
 
-    {% if selectedSite == '2' %}
-        {% set events = craft.entries.section(settings.eventSection)
-            .site('*')
-            .anyStatus()
-            .all()
-        %}
-    {% else %}
-        {% set events = craft.entries.section(settings.eventSection)
-            .siteId(selectedSite)
-            .anyStatus()
-            .all()
-        %}
-    {% endif %}
-
-    {% set ids = sort(events, selectedTime) %}
-    {% set eventTypes = craft.app.getSections().getSectionByHandle(settings.eventSection).getEntryTypes() %}
-
     <div id="dashboard" class="bg-gray-100 p-6 pt-2 -mt-6 -ml-6 relative">
 
-        <header-dashboard start="{{ start|date('d F, Y ') }}" end="{{ end|date('d F, Y ') }}">
-            <div class="space-x-4">
-                {%- include "craft-attendees/_includes/types-menu.twig" with {
-                    baseUrl: pluginCpUrl ~ '/dashboard',
-                    eventTypes: eventTypes
-                } -%}
+        <header-dashboard start="{{ start|date('d F, Y ') }}" end="{{ end|date('d F, Y ') }}" :types="{{ eventTypes | json_encode }}></header-dashboard>
 
-                {%- include "craft-attendees/_includes/time-menu.twig" with {
-                    baseUrl: pluginCpUrl ~ '/dashboard',
-                } -%}
-            </div>
-        </header-dashboard>
-
-        <stats-dashboard site="{{ selectedSite }}" ids="{{ ids|json_encode }}"></stats-dashboard>
+        <stats-dashboard site="{{ selectedSite }}"></stats-dashboard>
 
         <div class="block bg-gray-100 w-6 left-full pb-6 top-0 h-full absolute"></div>
         <div class="block bg-gray-100 h-6 top-full left-0 w-full absolute"></div>
